chore: Restructure files & folders.

--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 
     <!-- Styles: -->
     <!-- TODO: make sure you point to minified CSS for production: -->
-    <link rel="stylesheet" href="./public/stylesheets/styles.min.css">
+    <link rel="stylesheet" href="dist/stylesheets/styles.min.css">
     <!--<link rel="stylesheet" href="./src/stylesheets/main.css">-->
 
     <!-- Ionic icons -->
     <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
     <!-- favicon -->
-    <link rel="shortcut icon" type="image/x-icon" href="public/img/icon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="dist/img/icon.ico">
 </head>
 <body>
     <div id="body-wrapper">
@@ -58,7 +58,7 @@
                </div>
                 <!-- Title -->
                 <div class="row flex-grow justify-center align-items-end">
-                    <img src="public/img/splash_gray.svg" class="splash-image" alt="Stylized image of Dee Reddy">
+                    <img src="dist/img/splash_gray.svg" class="splash-image" alt="Stylized image of Dee Reddy">
                 </div> <!-- /.row -->
             </section> <!-- /#home -->
 
@@ -82,7 +82,7 @@
                     <div class="about-li row">
                         <div class="col-5 flex-row justify-end">
                             <figure>
-                                <img src="./public/img/sitting_200.svg" alt="Man working on computer">
+                                <img src="dist/img/sitting_200.svg" alt="Man working on computer">
                             </figure>
                         </div>
                         <div class="col-4">
@@ -102,7 +102,7 @@
                     <div class="about-li row">
                         <div class="col-5 flex-row justify-end">
                             <figure>
-                                <img src="./public/img/code_laptop_200.svg" alt="Code on a laptop">
+                                <img src="dist/img/code_laptop_200.svg" alt="Code on a laptop">
                             </figure>
                         </div>
                         <div class="col-4">
@@ -122,7 +122,7 @@
                     <div class="about-li row">
                         <div class="col-5 flex-row justify-end">
                             <figure>
-                                <img src="./public/img/devices_200_blue.svg" alt="Different devices screens: desktop and mobile">
+                                <img src="dist/img/devices_200_blue.svg" alt="Different devices screens: desktop and mobile">
                             </figure>
                         </div>
                         <div class="col-4">
@@ -160,9 +160,9 @@
                 <!-- Portfolio Tiles -->
                 <!-- portfolio-row -->
                 <div class="portfolio-row auto-margin">
-                    <a href="public/img/portfolio/image_sharing_1.png" target="_blank">
+                    <a href="dist/img/portfolio/image_sharing_1.png" target="_blank">
                         <figure>
-                            <img src="public/img/thumbnails/image_sharing_thumb.png" alt="Portfolio preview: Image Sharing app">
+                            <img src="dist/img/thumbnails/image_sharing_thumb.png" alt="Portfolio preview: Image Sharing app">
                             <figcaption>
                                 <h4>
                                     Image Sharing App
@@ -174,9 +174,9 @@
                         </figure>
                     </a>
 
-                    <a href="public/img/portfolio/aiai.png" target="_blank">
+                    <a href="dist/img/portfolio/aiai.png" target="_blank">
                         <figure>
-                            <img src="public/img/thumbnails/aiai_thumb.png" alt="Portfolio preview: AIAI website">
+                            <img src="dist/img/thumbnails/aiai_thumb.png" alt="Portfolio preview: AIAI website">
                             <figcaption>
                                 <h4>
                                     AIAI
@@ -188,9 +188,9 @@
                         </figure>
                     </a>
 
-                    <a href="public/img/portfolio/couch.png" target="_blank">
+                    <a href="dist/img/portfolio/couch.png" target="_blank">
                         <figure>
-                            <img src="public/img/thumbnails/couch_thumb.png" alt="Portfolio preview: COUCH website">
+                            <img src="dist/img/thumbnails/couch_thumb.png" alt="Portfolio preview: COUCH website">
                             <figcaption>
                                 <h4>
                                     COUCH
@@ -205,9 +205,9 @@
 
                 <!-- portfolio-row -->
                 <div class="portfolio-row auto-margin">
-                    <a href="public/img/portfolio/iron_post.png" target="_blank">
+                    <a href="dist/img/portfolio/iron_post.png" target="_blank">
                         <figure>
-                            <img src="public/img/thumbnails/iron_post_thumb.png" alt="Portfolio preview: Iron Post website">
+                            <img src="dist/img/thumbnails/iron_post_thumb.png" alt="Portfolio preview: Iron Post website">
                             <figcaption>
                                 <h4>
                                     Iron Post
@@ -218,9 +218,9 @@
                             </figcaption>
                         </figure>
                     </a>
-                    <a href="public/img/portfolio/conference_central.png" target="_blank">
+                    <a href="dist/img/portfolio/conference_central.png" target="_blank">
                         <figure>
-                            <img src="public/img/thumbnails/cc_thumb.png" alt="Portfolio preview: Conference central app">
+                            <img src="dist/img/thumbnails/cc_thumb.png" alt="Portfolio preview: Conference central app">
                             <figcaption>
                                 <h4>
                                     Conference Central
@@ -231,9 +231,9 @@
                             </figcaption>
                         </figure>
                     </a>
-                    <a href="public/img/portfolio/swiss_tournament.png" target="_blank">
+                    <a href="dist/img/portfolio/swiss_tournament.png" target="_blank">
                         <figure>
-                            <img src="public/img/thumbnails/swiss_tournament_thumb.png" alt="Portfolio preview: Swiss Tournament scheduler">
+                            <img src="dist/img/thumbnails/swiss_tournament_thumb.png" alt="Portfolio preview: Swiss Tournament scheduler">
                             <figcaption>
                                 <h4>
                                     Swiss Tournament Planner
@@ -282,7 +282,7 @@
 
     <!-- Custom JS: -->
     <!-- TODO: ensure you point to minified JS for production: -->
-    <script src="./public/js/scripts.min.js"></script>
-    <!--<script src="./src/js/scripts.js"></script>-->
+    <script src="dist/scripts/scripts.min.js"></script>
+    <!--<script src="./src/scripts/scripts.scripts"></script>-->
 </body>
 </html>
