format: Make minor adjustments to tasks and styles.

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
     <!-- Styles: -->
     <!-- TODO: make sure you point to minified CSS for production: -->
-    <link rel="stylesheet" href="dist/stylesheets/styles.min.css">
-    <!--<link rel="stylesheet" href="./src/stylesheets/main.css">-->
+    <!--<link rel="stylesheet" href="dist/stylesheets/styles.min.css">-->
+    <link rel="stylesheet" href="./src/stylesheets/main.css">
 
     <!-- Ionic icons -->
     <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
@@ -39,7 +39,7 @@
                     <div class="col-1"></div>
                 </nav>
             </header>
-            <!-- ================ Adaptive Menu ================ -->
+            <!-- ================ Hamburger Menu ================ -->
             <nav id="drop-down-menu">
                 <a class="triple-bar hidden"><i class="ion-navicon"></i></a>
                 <ul class="hidden">
@@ -55,7 +55,7 @@
                 <div class="text-center home-title">
                     <h1>Dee Reddy</h1>
                     <h5>Web Developer</h5>
-               </div>
+                </div>
                 <!-- Title -->
                 <div class="row flex-grow justify-center align-items-end">
                     <img src="dist/img/splash_gray.svg" class="splash-image" alt="Stylized image of Dee Reddy">
@@ -282,7 +282,7 @@
 
     <!-- Custom JS: -->
     <!-- TODO: ensure you point to minified JS for production: -->
-    <script src="dist/scripts/scripts.min.js"></script>
-    <!--<script src="./src/scripts/scripts.scripts"></script>-->
+    <!--<script src="dist/scripts/scripts.min.js"></script>-->
+    <script src="./src/scripts/scripts.scripts"></script>
 </body>
 </html>
