refactor: Update navicon styles.

--- a/index.html
+++ b/index.html
@@ -40,16 +40,24 @@
         <main>
             <!-- ================ HEADER ================ -->
             <header id="header" class="container">
-                <nav class="container-row align-items-center">
-                    <div class="col-5"></div>
-                    <div class="col-6 text-end">
-                        <a href="#" name="test"><button>about</button></a>
-                        <a href="#portfolio"><button>portfolio</button></a>
-                        <a href="mailto:deesus@yandex.com" target="_blank"><button>contact</button></a>
-                    </div>
-                    <div class="col-1"></div>
+                <nav class="">
+                    <ul class="row align-items-center justify-end">
+                        <li>
+                            <a href="#"><button>about</button></a>
+                        </li>
+                        <li>
+                            <a href="#portfolio"><button>portfolio</button></a>
+                        </li>
+                        <li>
+                            <a href="mailto:deesus@yandex.com" target="_blank"><button>contact</button></a>
+                        </li>
+                        <li class="hamburger-icon row justify-content-center">
+                            <a href="#"><i class="ion-navicon"></i></a>
+                        </li>
+                    </ul>
                 </nav>
             </header>
+
             <!-- ================ Hamburger Menu ================ -->
             <nav id="hamburger-menu" class="menu-hidden">
                 <div class="menu-heading row">
