refactor: Correct events for nav clicks.

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                             <a href="mailto:deesus@yandex.com" target="_blank"><button>contact</button></a>
                         </li>
                         <li class="hamburger-icon row justify-content-center">
-                            <a href="#"><i class="ion-navicon"></i></a>
+                            <i class="ion-navicon"></i>
                         </li>
                     </ul>
                 </nav>
@@ -65,7 +65,7 @@
                         menu
                     </div>
                     <div class="">
-                        <a class="triple-bar"><i class="ion-ios-close-empty"></i></a>
+                        <i class="ion-ios-close-empty"></i>
                     </div>
                 </div> <!-- /.menu-heading.row -->
 
