chore: Build and fix links.

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
     <!-- Styles: -->
     <!-- TODO: make sure you point to minified CSS for production: -->
-    <!--<link rel="stylesheet" href="dist/stylesheets/styles.min.css">-->
-    <link rel="stylesheet" href="./src/stylesheets/main.css">
+    <link rel="stylesheet" href="dist/stylesheets/main.min.css">
+    <!--<link rel="stylesheet" href="./src/stylesheets/main.css">-->
 
     <!-- jQuery CDN -->
     <script defer
@@ -23,8 +23,8 @@
 
     <!-- Custom JS: -->
     <!-- TODO: ensure you point to minified JS for production: -->
-    <!--<script src="dist/scripts/scripts.min.js"></script>-->
-    <script defer src="./src/scripts/scripts.js"></script>
+    <script defer src="dist/scripts/scripts.min.js"></script>
+    <!--<script defer src="./src/scripts/scripts.js"></script>-->
 
     <!-- Ionic icons -->
     <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
