bug: Fix links.
Fixed links and removed jQuery CDN.

--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@
     <!--<link rel="stylesheet" href="./src/stylesheets/main.css">-->
 
     <!-- jQuery CDN -->
-    <script defer
+    <!-- <script defer
             src="http://code.jquery.com/jquery-2.2.2.min.js"
             integrity="sha256-36cp2Co+/62rEAAYHLmRCPIych47CvdM+uTBJwSzWjI="
             crossorigin="anonymous"></script>
+    -->
 
     <!-- Custom JS: -->
     <!-- TODO: ensure you point to minified JS for production: -->
@@ -43,7 +44,7 @@
                 <nav class="">
                     <ul class="row align-items-center justify-end">
                         <li>
-                            <a href="#"><button>about</button></a>
+                            <a href="#about"><button>about</button></a>
                         </li>
                         <li>
                             <a href="#portfolio"><button>portfolio</button></a>
