--- a/index.html
+++ b/index.html
@@ -16,11 +16,10 @@
     <!--<link rel="stylesheet" href="./src/stylesheets/main.css">-->
 
     <!-- jQuery CDN -->
-    <!-- <script defer
+    <script defer
             src="http://code.jquery.com/jquery-2.2.2.min.js"
             integrity="sha256-36cp2Co+/62rEAAYHLmRCPIych47CvdM+uTBJwSzWjI="
             crossorigin="anonymous"></script>
-    -->
 
     <!-- Custom JS: -->
     <!-- TODO: ensure you point to minified JS for production: -->
